<resources>
    <string name="app_name">Mercado Barato</string>
    <string name="app_preferences">MercadoBaratoPreferences</string>
    <string name="preferred_distance">preferredDistance</string>
    <string name="all_app_name">Mercado Barato</string>
    <string name="scan_barcode">Scan Product</string>
    <string name="product_code">Product Code</string>
    <string name="product_price">Product Price</string>
    <string name="add_product">Add product to list</string>
    <string name="product_description">Product Description</string>
    <string name="save_product">Save Product</string>
    <string name="add_product_cart">Add product to shopping list</string>
    <string name="search">Search Groceries</string>
    <string name="title_activity_navigation_menu">NavigationMenuActivity</string>

    <string name="mapMenu">Check-in</string>
    <string name="listMenu">Grocery Lists</string>
    <string name="productPrice">Products Prices</string>
    <string name="profile">Profile</string>
    <string name="connect_with_facebook">Log in with Facebook</string>
    <string name="welcome">Welcome</string>
    <string name="cancel_login">Login cancelled</string>
    <string name="error_login">Login failed</string>
    <string name="logout">Logout</string>
    <string name="firebase_error_login">Firebase Authentication Failed</string>

    <string name="loading">Loading...</string>
    <string name="waiting">Please Wait</string>
    <string name="locationNotFound">Location Not found</string>
    <string name="checkInFailed">Please go to a super market to check-in</string>
    <string name="checkedIn">Hello! you just checked in at</string>
    <string name="productsUpdateMessage">Please Help Us Addding new products or update products prices.</string>
    <string name="placesNotFound">No Super Market around you, please increase your range.</string>

    <string name="deleted_item_list">Item removed from your list</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="userLoc">You are here!</string>
    <string name="exit">Exit</string>
    <string name="validateFormLogin">Favor preencher todos os campos.</string>
    <string name="validatePermissions">Para usar esse APP é preciso aceitar as permissões.</string>
    <string name="validateLoginSenha">Login ou senha incorretos.</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="validatePasswordEquals">Password\'s not match</string>
    <string name="compareProductsPrice">Compare Products Prices</string>
    <string name="title_activity_compare_prices_form">ComparePricesForm</string>
    <string name="title_activity_compare_price_form_fragment">Compare Price Form</string>
    <string name="max_distance_to_supermarkets">Max distance to supermarkets</string>
    <string name="product_not_found">Product not found</string>
    <string name="product_was_added">Product was added to shopping list</string>
    <string name="register_screen_title">Register a new user</string>
</resources>
