<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_product_ship_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.br.cdr.mercadobarato.AddProductShoppingListActivity">


    <Button
        android:id="@+id/btn_scan_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_name"
        android:drawableStart="@drawable/ic_action_name"
        android:text="@string/scan_barcode" />

    <EditText
        android:id="@+id/edit_product_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_code" />

    <EditText
        android:id="@+id/edit_product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_description"
        android:inputType="textMultiLine"
        android:lines="5" />

    <Button
        android:id="@+id/btn_save_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_product_cart" />


</LinearLayout>
