<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.br.cdr.mercadobarato.AddProductActivity">

    <Button
        android:id="@+id/btn_scan_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_manage"
        android:drawableStart="@drawable/ic_menu_manage"
        android:text="@string/scan_barcode" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_product_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_product_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_code" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_price" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_description"
            android:inputType="textMultiLine"
            android:lines="5" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_save_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_product" />

</LinearLayout>
