<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.br.cdr.mercadobarato.activity.RegisterActivity">

    <include android:id="@+id/main_bar"
        layout="@layout/main_bar">
    </include>

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/main_bar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="70dp"
        android:id="@+id/name_field"
        android:hint="@string/name" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="21dp"
        android:id="@+id/email_field"
        android:layout_below="@+id/name_field"
        android:layout_alignStart="@+id/name_field"
        android:hint="Email" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="28dp"
        android:id="@+id/password_field"
        android:layout_below="@+id/email_field"
        android:layout_alignStart="@+id/email_field"
        android:hint="@string/password" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/password_field"
        android:layout_alignStart="@+id/password_field"
        android:layout_marginTop="30dp"
        android:id="@+id/confirm_password"
        android:hint="@string/confirm_password" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_password"
        android:layout_alignParentEnd="true"
        android:text="@string/register"
        android:layout_marginEnd="41dp"
        android:layout_marginTop="15dp"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        android:id="@+id/button_register" />


</RelativeLayout>

